# python-jsql

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.py
.github/: dependabot.yaml
.github/workflows/: build.yaml
jsql/: __init__.py
scripts/: test.sh
tests/: test_list_param.py  test_render.py  test_sql.py  test_sql_proxy_factory.py  test_sqlproxy.py  test_version.py
