[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jsql"
description = 'Lightweight wrapper around sqlalchemy + jinja2.'
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
keywords = [
  "sql",
  "sqlalchemy",
  "jinja2",
  "sql-template",
]
authors = [
  { name = "Hisham Zarka", email = "hzarka@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "six",
  "jinja2",
  "sqlalchemy",
]
dynamic = ["version"]

[project.optional-dependencies]
lint = [
    "pre-commit",
]
test = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
]


[project.urls]
Documentation = "https://github.com/hzarka/python-jsql#readme"
Issues = "https://github.com/hzarka/python-jsql/issues"
Source = "https://github.com/hzarka/python-jsql"

[tool.hatch.version]
path = "jsql/__init__.py"


